# claude-stt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
commands/: config.md  setup.md  start.md  status.md  stop.md
hooks/: hooks.json
scripts/: exec.py  setup.py
src/claude_stt/: cli.py  config.py  daemon.py  daemon_service.py  engine_factory.py  hotkey.py  keyboard.py  menubar.py  platform.py  recorder.py  setup.py  window.py
src/claude_stt/engines/: __init__.py  whisper.py
tests/: test_config_menubar.py  test_daemon.py  test_engine_factory.py  test_import_safety.py  test_keyboard.py  test_menubar.py  test_platform.py
